--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "description": "A friend in times of need",
   "dependencies": {
     "hubot": "^2.18.0",
+    "hubot-business-cat": "^1.4.2",
     "hubot-diagnostics": "0.0.1",
     "hubot-google-images": "^0.2.6",
     "hubot-google-translate": "^0.2.0",
