--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "author": "BriocheBerlin <brigitte.markmann@asquera.de>",
   "description": "Our darling hubot",
   "dependencies": {
+    "dotenv": "^2.0.0",
     "hubot": "^2.18.0",
     "hubot-business-cat": "^1.4.2",
     "hubot-diagnostics": "0.0.1",
+    "hubot-energize-me": "git://github.com/Asquera/hubot-energize-me",
     "hubot-google-images": "^0.2.6",
     "hubot-google-translate": "^0.2.0",
     "hubot-help": "^0.1.3",
@@ -18,8 +20,7 @@
     "hubot-redis-brain": "0.0.3",
     "hubot-rules": "^0.1.1",
     "hubot-scripts": "^2.16.2",
-    "hubot-shipit": "^0.2.0",
-    "hubot-energize-me": "git://github.com/Asquera/hubot-energize-me"
+    "hubot-shipit": "^0.2.0"
   },
   "engines": {
     "node": "0.10.x"
